# TriggerAnaTAMaker

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  config.json
src/: CMakeLists.txt  PMTINFO_1x8x14.hh  PMTInfo.hh  TriggerActivity.hh  TriggerActivityMaker.hh  TriggerActivityMakerCluster.cc  TriggerActivityMakerCluster.hh  TriggerActivityMakerMTCA.cc  TriggerActivityMakerMTCA.hh  TriggerPrimitive.hh  Verbosity.hh  main.cc  utils.hh
